            has a dummy 'autodetect' call in there, which does not do
            any autodetecting at all but just point to the old default.
            Which is another way of saying it's a work in progress,
            that. Nevertheless, this should stay, so the compiler
            definitions will be fixed for this. Fixed in the compiler table.



2008-05-01 Ger Hobbelt

    * BillY-equivalent src makefile is now renamed to

         Makefile.vanilla

      to better signify the raison-d-etre for this file: a 'vanilla UNIX
      setup' for those who won't or can't compile the ./configure-based
      set.

      With that comes an appropriately preconfigured config headerfile
      and #define to turn this on - set by default in
      src/Makefile.vanilla, of course:

          #define            : ORIGINAL_VANILLA_UNIX_MAKEFILE
          #include headefile : "config_vanilla_UNIX_sys_defaults.h"

    * CHANGE: now all :@:: and :+:: accepting script elements also
      accept :#:: - it was very handy to be able to print
      string/variable content length in output /.../ statements, that's
      why.

    * CHANGE: Vector Tokenizer now accepts 3D vector matrices (i.e.
              multiple matrices for stride != 1 processes), comes with
              its own structures to define cutom tokenizer functions for
              use by the tokenizer and the code has been completely
              refactored to facilitate these new features in the best
              possible way.

      Currently the VT code accepts up to 4 2D vector matrices in
      parallel; currenty published classifiers only use 2. This is a
      compile-time constant:

         #define UNIFIED_VECTOR_STRIDE 4

    * Fixed input line handling for MSDOS & older MAC which do not use
      the UNIX LF ('\n') line termination, but CRLF and CR respectively.
      (crm_expr_file_io.c)

    * CHANGE: speed improvement for Win32 stdio by removing the fflush()
      calls, which are useless anyway.
