@@ -568,7 +568,7 @@
 /* #undef PREFER_PORTABLE_SNPRINTF */
 
 /* revision number of software */
-#define REVISION "2275"
+#define REVISION "2296"
 
 /* The size of `int', as computed by sizeof. */
 #define SIZEOF_INT 4
@@ -586,7 +586,7 @@
 #define STDC_HEADERS 1
 
 /* distribution archive filename postfix code of the software */
-#define TAR_FILENAME_POSTFIX "Ger-2275"
+#define TAR_FILENAME_POSTFIX "Ger-2296"
 
 /* Define to 1 if you can safely include both <sys/time.h> and <time.h>. */
 #define TIME_WITH_SYS_TIME 1
